--- a/CertificationList/ToDoList/Views/Shared/_Layout.cshtml
+++ b/CertificationList/ToDoList/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="ToDo" asp-action="Index">Home</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ToDo" asp-action="About">About Us</a>
+                        </li>
                     </ul>
                 </div>
             </div>
