About Page added

--- a/CertificationList/ToDoList/Views/Shared/_Layout.cshtml
+++ b/CertificationList/ToDoList/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="ToDo" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ToDo" asp-action="About">About Us</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="ToDo" asp-action="About">About Us</a>
                         </li>
                     </ul>
                 </div>
