--- a/CertificationList/ToDoList/Views/ToDo/List.cshtml
+++ b/CertificationList/ToDoList/Views/ToDo/List.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewData["Title"] = "List";
 }
-<h1 class="display-4">Certifications List</h1>
+<h1 class="display-4">
+    Certifications List
+</h1>
 <p class="lead">
     Here you can manage all your certifications.
 </p>
