About page content added and header modified

--- a/CertificationList/ToDoList/Views/ToDo/List.cshtml
+++ b/CertificationList/ToDoList/Views/ToDo/List.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "List";
 }
 <h1 class="display-4">
-    Certifications List
+    @*Changing header*@
+    To do Certifications :
 </h1>
 <p class="lead">
     Here you can manage all your certifications.
