Deleted content on About Us page

--- a/CertificationList/ToDoList/Views/ToDo/List.cshtml
+++ b/CertificationList/ToDoList/Views/ToDo/List.cshtml
@@ -4,8 +4,7 @@
     ViewData["Title"] = "List";
 }
 <h1 class="display-4">
-    @*Changing header*@
-    To do Certifications :
+    Certification List
 </h1>
 <p class="lead">
     Here you can manage all your certifications.
