About us page content added

--- a/CertificationList/ToDoList/Views/ToDo/About.cshtml
+++ b/CertificationList/ToDoList/Views/ToDo/About.cshtml
@@ -7,5 +7,7 @@
         <u>About Us</u>
     </h3>
     <hr />
-    
+    <p>
+        Certification is part of Testing, inspection and certification and the provision by an independent body of written assurance (a certificate) that the product, service or system in question meets specific requirements.[1] It is the formal attestation or confirmation of certain characteristics of an object, person, or organization. This confirmation is often, but not always, provided by some form of external review, education, assessment, or audit. Accreditation is a specific organization's process of certification. According to the U.S. National Council on Measurement in Education, a certification test is a credentialing test used to determine w
+    </p>
 </div>
